--- a/shows/package.json
+++ b/shows/package.json
@@ -18,7 +18,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "concurrently  --kill-others  \"npm run start\" \"npm run testApp\" ",
+    "test": "start-server-and-test start http://localhost:3000 testApp",
     "testApp": "jest",
     "eject": "react-scripts eject"
   },
@@ -42,6 +42,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "concurrently": "^6.2.1"
+    "concurrently": "^6.2.1",
+    "start-server-and-test": "^1.13.1"
   }
 }
